# django-app

./: .gitignore
11_I18n/app_goods/: admin.py  tests.py  views.py
11_I18n/app_pages/: urls.py
11_I18n/app_users/: admin.py  views.py
11_I18n/django_example/: settings.py  urls.py
17_DataExport_old/app_housing/: admin.py  apps.py  models.py  urls.py  views.py
17_DataExport_old/app_rss/: feeds.py  urls.py
17_DataExport_old/djsale/: settings.py  (+1 more)
M_10_Testing/: requirements.txt
M_15_DatabasesAdvanced/: queries.sql
M_17_DataExport/: Dockerfile  devices.csv  docker-compose.yaml  requirements.txt
M_18_DjangoCaching/: requirements.txt
M_19_DjangoProd/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
M_19_DjangoProd/mysite/: log.txt  requirements.txt
M_19_DjangoProd/mysite/blogapp/: models.py  urls.py
M_19_DjangoProd/mysite/blogapp/fixtures/: category.json
M_19_DjangoProd/mysite/blogapp/management/commands/: select_fields.py
M_19_DjangoProd/mysite/blogapp/templates/blogapp/: article_list.html
M_19_DjangoProd/mysite/database/: db.sqlite3
M_19_DjangoProd/mysite/myauth/: views.py
M_19_DjangoProd/mysite/myauth/templates/myauth/: user_details.html
M_19_DjangoProd/mysite/mysite/: settings.py  sitemaps.py
M_19_DjangoProd/mysite/shopapp/: forms.py  urls.py  views.py
M_19_DjangoProd/mysite/shopapp/management/commands/: selecting_fields.py
M_19_DjangoProd/mysite/shopapp/templates/admin/: csv_form.html
M_19_DjangoProd/mysite/shopapp/templates/shopapp/: order_form.html  orders_list.html  product_update_form.html  user_orders.html
(+245 files in other folders)
